monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: monitoring-ingress

  namespace: monitoring

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:

  ingressClassName: alb

  rules:

    - http:

        paths:

          - path: /prometheus

            pathType: Prefix

            backend:

              service:

                name: kube-prometheus-stack-prometheus

                port:

                  number: 9090


          - path: /

            pathType: Prefix

            backend:

              service:

                name: kube-prometheus-stack-grafana

                port:

                  number: 80
